...
        <item>dynamic</item>
        <item>dark</item>
        <item>black</item>
    </string-array>

    <!-- Font size. -->
    <string name="pref_key_font_size" translatable="false">pref_key_font_size</string>
    <string name="pref_default_font_size" translatable="false">@string/pref_value_font_size_default</string>
    <string name="pref_value_font_size_small" translatable="false">small</string>
    <string name="pref_value_font_size_default" translatable="false">default</string>
    <string name="pref_value_font_size_large" translatable="false">large</string>
    <string-array name="font_sizes">
        <item>@string/font_size_small</item>
        <item>@string/font_size_default</item>
        <item>@string/font_size_large</item>
    </string-array>
    <string-array name="font_sizes_values">
...
