...
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar style="@style/LoadingProgressBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_book_recycler_view"
                style="@style/FastScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingTop="8dp"
                android:paddingBottom="@dimen/padding_bottom_for_fab"
...
