...
        android:id="@+id/dialog_refile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/ic_close" />

    <TextView
        android:id="@+id/dialog_refile_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/screen_edge"
        android:paddingEnd="@dimen/screen_edge"
        android:paddingBottom="8dp"
        android:maxLines="2"
...
            <ImageButton
                android:id="@+id/dialog_refile_refile_here"
                style="@style/BorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/refile"
                android:src="@drawable/ic_move_to_inbox"
                app:layout_constraintBottom_toBottomOf="@+id/dialog_refile_breadcrumbs_scroll_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dialog_refile_breadcrumbs_scroll_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
...
