<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete" />

    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_done"
        app:showAsAction="always"
        android:title="@string/done" />
</menu>
