...

                </LinearLayout>

                <!-- Content -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/content"
                    app:view_id="@+id/content_view"
                    app:edit_id="@+id/content_edit"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen"
...
